--- a/views/main.jade
+++ b/views/main.jade
@@ -13,7 +13,7 @@ block content
                 label(for="last_name") Apellidos
                 input#last_name.form-control(type="text",placeholder="Sus apellidos")
                 .form-group
-                label(for="timezone") Reg&oacute;n
+                label(for="timezone") Regi&oacute;n
                 input#timezone.form-control(type="text",placeholder="-5",value="-5")
                 .form-group
                 label(for="locale") Idioma
